app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

* {
	margin: 0;
	padding: 0;
}
body {
	scroll-behavior: smooth;
}

#yield-container {
	border-right: solid 1px hsla(0, 0%, 100%, 0.3);
}

/* NAVBAR CSS */
aside {
	position: sticky;
	top: 25px;
	left: 0;
	height: 100vh;
}

nav {
	margin-top: 30px;
}

nav .nav-icon {
	font-size: 20px;
}

nav a:hover {
	background-color: hsla(0, 0, 100, 0.1);
}

/* Search Bar CSS */

.search-wrapper {
	background-color: #202327;
	overflow: hidden;
}

.search-wrapper #query {
	background-color: #202327;
	box-shadow: none;
	border: none;
	margin-left: 10px;
	color: white;
}

#query:focus {
	outline: none;
	color: white;
}

label .search-icon {
	color: #595a5c;
}

/* form new tweet */

#char-count {
	font-size: 0.8rem;
}

.back-link {
	text-decoration: none;
	color: white;
}

.back-link:hover {
	color: #0b5ed7;
}

.tweet-area,
#tweet-body {
	background-color: rgb(24, 24, 24);
	border-radius: 10px;
	border: none;
	padding-left: 10px;
	color: white;
}

.tweet-area:focus,
#tweet-body:focus {
	outline: 1px solid #0b5ed7;
}

/* Media querys */
@media (max-width: 720px) {
	.navbar {
		align-items: center;
	}
	.logo {
		text-align: center;
	}
	#yield-container {
		border: none;
	}
}
@media (min-width: 720px) {
	.navbar {
		align-items: start;
	}
}

